[package]
name = "warp-reverse-proxy"
version = "1.0.0"
authors = ["danielsanchezq <sanchez.quiros.daniel@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://github.com/danielSanchezQ/warp-reverse-proxy"
repository = "https://github.com/danielSanchezQ/warp-reverse-proxy"
description = "Warp filter that acts as a reverse proxy, forwarding the request to a proxy address and extracting a response."
readme = "README.md"
keywords = ["warp", "proxy", "reverse", "filter"]
categories = ["web-programming", "web-programming::http-server"]
exclude = [
    ".github",
]

[dependencies]
once_cell = "1.21"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
thiserror = "2.0"
unicase = "2.8"
warp = { version = "0.4",  default-features = false, features = ["server", "test"] }

[dev-dependencies]
bytes = "1.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
